# standard-deluxe

./: .coveragerc.toml  .gitignore  .harper-dictionary.txt  .pre-commit-config.yaml  .readthedocs.yaml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  _typos.toml  changelog.tera  codebook.toml  cog.toml  data.json  mise.toml  pdm_build.py  pyproject.toml  pyrightconfig.json  ruff.toml  rumdl.toml  tox.ini
.github/workflows/: downloads.yml  main.yml  release-only.yml  release.yml
docs/: Makefile  make.bat
docs/sources/: conf.py  contributing.rst  index.rst  license.rst
docs/sources/_static/: custom.css
docs/sources/_templates/autoapi/: macros.rst
docs/sources/_templates/autoapi/python/: class.rst  module.rst
docs/sources/api/: index.rst
docs/sources/story/: intro.md
htmlcov/: index.html  status.json
notes/: argparse_new_color.md  async_command_decorator.md  ci.md  cibuildwheel-migration.md  colorama_replacement.md  command_pipe_feature.md  daemon_windows_support.md  features_ideas.md  features_rebase.md  release-workflow-cross-platform.md  tree_module_api_review.md
src/deluxe/: __init__.py  _cctypes.pyi  _ctypes.pyx  _dirs_darwin.py  _dirs_linux.py  _dirs_meta.py  _dirs_nt.py  _multiton.py  _static.py  _types.pyi  _types.pyx  app.py  availability.py  collections.py  dirs.py  enums.py  environ.py  file.py  files.py  functional.py  importers.py  knownfolder.py  mappings.py  multiton.py  mureq.py  nodejs.py  process.py  protocols.py  sequences.py  syntax.py  tree.pyi  tree.pyx  types.py  version.py
src/deluxe/console/: __init__.py  ansi.py  argparser.py  cli.py  wrap.py
src/deluxe/factory/: __init__.py  creators.py
tests/: availability_test.py  console_ansi_test.py  console_argparser_test.py  console_cli_test.py  console_text_wrapper_test.py  default_test.py  enums_type_test.py  environ_environment_test.py  environ_evar_test.py  file_exec_test.py  file_get_pe_version_test.py  file_is_binary_test.py  file_is_winpath_test.py  file_split_drive_test.py  files_exec_test.py  files_get_pe_version_test.py  files_is_binary_test.py  files_is_winpath_test.py  files_split_drive_test.py  frozen_test.py  functional_cached_property_test.py  functional_monad_lazy_test.py  functional_monad_maybe_callable_test.py  functional_monad_maybe_test.py  importers_test.py  knownfolder_test.py  mappings_filtered_view_test.py  mappings_frozen_map_test.py  mappings_orderable_dict_test.py  multiton_test.py  process_command_test.py  process_daemon_test.py  process_test.py  protocols_test.py  sequences_dedup_list_test.py  sequences_test.py  static_type_test.py  tree_test.py  unset_test.py  version_test.py
tools/: downloads.py  show.py  traceback.py  typyness.py
typings/test/support/: __init__.pyi  import_helper.pyi  os_helper.pyi  testresult.pyi
