[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
name = "standard-deluxe"
description = "A handfull collection of python modules."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = []
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

urls.homepage = "https://github.com/gravures/standard-deluxe"
urls.repository = "https://github.com/gravures/standard-deluxe"
urls.documentation = "https://github.com/gravures/standard-deluxe"
urls.issue = "https://github.com/gravures/standard-deluxe/issues"

dynamic = ["version"]
requires-python = ">=3.11"
dependencies = []

#####################################################
# PDM
#####################################################
[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
source-includes = ["licenses"]
excludes = ["**/.*"]
includes = ["src/deluxe/"]

[tool.pdm.version]
source = "scm"
write_to = "deluxe/_version.py"
write_template = "__version__ = '{}'"

##
#
[tool.uv.sources]
furo = { path = "../furo/", editable = false } # "furo @ git+https://github.com/gravures/furo.git@gravures"

[dependency-groups]
dev = ["ruff>=0.9", "pre-commit>=4.1", "dead>=2.1", "pretty-errors>=1.2.25"]
test = [
  "basedpyright>=1.28",
  "pytest>=8.3",
  "hypothesis",
  "coverage[toml]>=7.6",
  "tox>=4.24",
  "tox-pdm>=0.7.2",
]
docs = ["sphinx", "sphinx-autoapi", "myst-parser", "sphinx-copybutton", "furo"]
monorepo = ["pdm>=2.22.4", "pdm-backend>=2.4.3"]

#####################################################
# Documentation
#####################################################
[tool.esbonio.sphinx]
buildCommand = [
  "sphinx-build",
  "-M",
  "dirhtml",
  "./docs/sources/",
  "${defaultBuildDir}",
]
pythonCommand = ["uv", "run", "python"]

#####################################################
# PDM SCRIPTS
#####################################################
[tool.pdm.scripts]
lock_ = "uv lock --no-python-downloads"
sync_ = "uv sync --locked --all-packages --no-python-downloads {args}"
build_ = "uv build --all-packages --no-python-downloads"
publish_ = "uv publish -v --no-python-downloads ./dists/*"
install_ = { composite = ["lock_", "sync_"] }

itest = "pytest -s -v -k {args}"
test-all = "coverage run -m pytest"
test-types = "pdm run basedpyright --stats ./src/**"
test-cover = "coverage report"
test-tox = "tox --develop -r -e py"
test-dead = "dead"

docs-html = "pdm run sphinx-build -M html ./docs/sources ./docs/build"

install-traceback = "_traceback.py"
list-group = "pdm list --fields name,groups,version,licenses,homepage --sort groups,name,licenses --exclude :sub"
export-require = "pdm export -f requirements -o requirements.txt"

pc-init = { composite = ["pre-commit install --install-hooks", "pc-update"] }
pc-update = "pre-commit autoupdate"
pc-check = { env = { "SKIP" = "basedpyright" }, cmd = "pre-commit run --all-files" }
pc-clean = "pre-commit clean && pre-commit gc"
pc-safety = { composite = [
  "export-require",
  "pre-commit run python-safety-dependencies-check",
] }
checkup = { composite = [
  "pdm show",
  "list-group",
  "tokei",
  "pc-check",
  "test-types",
  "dead",
  "test-cover",
], keep_going = true }
