[project]
name = "standard-deluxe"
description = "A handfull collection of python modules."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = []
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]

urls.homepage = "https://github.com/gravures/standard-deluxe"
urls.repository = "https://github.com/gravures/standard-deluxe"
urls.documentation = "https://github.com/gravures/standard-deluxe"
urls.issue = "https://github.com/gravures/standard-deluxe/issues"

dynamic = ["version"]
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]
furo = { git = "https://github.com/gravures/furo", rev = "gravures" }

#####################################################
# Build Settings
#####################################################
[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend", "cython", "setuptools"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
source-includes = ["licenses"]
excludes = ["**/.*"]
includes = ["src/deluxe/"]

[tool.pdm.version]
source = "scm"
write_to = "deluxe/_version.py"
write_template = "__version__ = '{}'"

#####################################################
# Cython
#####################################################
[tool.cython]
enabled = true
log_errors = "./.cython_errors"

[tool.cython.cythonize]
nthreads = 0
exclude_failures = false
show_all_warnings = false

[[tool.cython.cythonize.extensions]]
name = "deluxe._types"
sources = ["src/deluxe/_types.pyx"]

[tool.cython.build]
optional = false
py_limited_api = false
language = "c"

[tool.cython.options]
docstrings = true
annotate = false

[tool.cython.compiler.directives]
language_level = 3
binding = false
boundscheck = true
wraparound = true
overflowcheck = true
initializedcheck = true
nonecheck = false
embedsignature = true
'optimize.use_switch' = false
'optimize.unpack_method_calls' = true
'warn.undeclared' = false
'warn.unreachable' = true
'warn.maybe_uninitialized' = true
'warn.unused' = true
'warn.unused_arg' = true
'warn.unused_result' = true
'warn.multiple_declarators' = true


#####################################################
# Dev Dependencies
#####################################################
[dependency-groups]
dev = [
  "basedpyright>=1.28",
  "ruff>=0.9",
  "pre-commit>=4.1",
  "pretty-errors>=1.2.25",
  "cython>=3.2.0",
  "cython-lint",
  "pdm-backend",
  "setuptools",
  "hypothesis>=6.150.0",
]
test = [
  "pytest>=9.0",
  "pytest-benchmark",
  "hypothesis",
  "coverage[toml]>=7.13",
  "coverage-conditional-plugin",
  "covdefaults",
  "tox>=4.24",
  "tox-pdm>=0.7.2",
  "dead>=2.1",
]
docs = [
  "sphinx",
  "sphinx-autoapi",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-immaterial",
]

#####################################################
# PyTest
#####################################################
[tool.pytest]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

#####################################################
# Documentation
#####################################################
[tool.esbonio.sphinx]
buildCommand = [
  "sphinx-build",
  "-M",
  "dirhtml",
  "./docs/sources/",
  "${defaultBuildDir}",
]
pythonCommand = ["uv", "run", "python"]

#####################################################
# PDM SCRIPTS
#####################################################
[tool.pdm.scripts]
install-traceback = "_traceback.py"

lock_ = "uv lock --no-python-downloads"
sync_ = "uv sync --reinstall-package standard-deluxe --locked --all-packages --no-python-downloads {args}"
build_ = "uv build --all-packages --no-python-downloads"
publish_ = "uv publish -v --no-python-downloads ./dists/*"
install_ = { composite = ["lock_", "sync_"] }
list_ = "pdm list --fields name,groups,version,licenses,homepage --sort groups,name,licenses --exclude :sub"

pc-init = { composite = ["pre-commit install --install-hooks", "pc-update"] }
pc-update = "pre-commit autoupdate"
pc-check = { env = { "SKIP" = "basedpyright" }, cmd = "pre-commit run --all-files" }
pc-clean = "pre-commit clean && pre-commit gc"
pc-safety = { composite = [
  "export-require",
  "pre-commit run python-safety-dependencies-check",

] }

test = "pytest --benchmark-skip --force-short-summary --tb=short  -k {args}"
test-all = "coverage run -m pytest --benchmark-skip {args}"
test-tox = "tox --develop -r -e py"
test-types = "basedpyright --stats ./src/**"
test-mypy = "mypy --pretty ./src/**"
test-typyness = "typyness.py"
test-cover = "coverage report --skip-covered"
test-bench = "pytest --force-short-summary --benchmark-only  --benchmark-warmup=on --benchmark-warmup-iterations=1000 --benchmark-name=short --benchmark-columns=mean,stddev,iqr,ops -k {args}"
test-dead = "dead"

build-doc = "pdm run sphinx-build -M html ./docs/sources ./docs/build"
export-require = "pdm export -f requirements -o requirements.txt"

checkup = { composite = [
  "pdm show",
  "list_",
  "tokei --sort code",
  "pc-check",
  "test-types",
  "dead",
  "test-cover",
], keep_going = true }
