[project]
name = "standard-deluxe"
description = "A handfull collection of python modules."
authors = [{ name = "Gilles Coissac", email = "gilles@ideographe.fr" }]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = []
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]

urls.homepage = "https://github.com/gravures/standard-deluxe"
urls.repository = "https://github.com/gravures/standard-deluxe"
urls.documentation = "https://standard-deluxe.readthedocs.io"
urls.issue = "https://github.com/gravures/standard-deluxe/issues"
urls.Changelog = "https://github.com/gravures/standard-deluxe/releases"

dynamic = ["version"]
requires-python = ">=3.11"
dependencies = []

#####################################################
# Build Settings
#####################################################
[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend", "cython", "setuptools"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
source-includes = [
  "assets/",
  "docs/",
  "licenses/",
  "tests/",
  "tools/",
  "typings/",
  "CHANGELOG.md",
  ".coveragerc.toml",
  "changelog.tera",
  "cog.toml",
  "mise.toml",
  "pyrightconfig.json",
  "ruff.toml",
  "uv.lock",
]
excludes = [
  "docs/build",
  "src/deluxe/**/*.so",
  "src/deluxe/**/*.pyd",
  "src/deluxe/**/*.c",
]

[tool.pdm.version]
source = "scm"
write_to = "deluxe/_version.py"
write_template = "__version__ = '{}'"

#####################################################
# Cython extensions modules
#####################################################
[tool.cython]
enabled = true
log_errors = "./.cython_errors"

[tool.cython.cythonize]
nthreads = 0
exclude_failures = false
show_all_warnings = false

[[tool.cython.cythonize.extensions]]
name = "deluxe._types"
sources = ["src/deluxe/_types.pyx"]

[tool.cython.build]
optional = false
py_limited_api = false
language = "c"

[tool.cython.options]
docstrings = true
annotate = false

[tool.cython.compiler.directives]
language_level = 3
binding = false
boundscheck = true
wraparound = true
overflowcheck = true
initializedcheck = true
nonecheck = false
embedsignature = true
'optimize.use_switch' = false
'optimize.unpack_method_calls' = true
'warn.undeclared' = false
'warn.unreachable' = true
'warn.maybe_uninitialized' = true
'warn.unused' = true
'warn.unused_arg' = true
'warn.unused_result' = true
'warn.multiple_declarators' = true

#####################################################
# Dev Dependencies
#####################################################
[dependency-groups]
dev = [
  "basedpyright",
  "ruff",
  "pretty-errors>=1.2.25",
  "cython>=3.2.0",
  "cython-lint",
  "pdm-backend",
  "setuptools",
]
test = [
  "pytest>=9.0",
  "pytest-cov >= 7.0",
  "pytest-xdist[psutil] >= 3.8",
  "pytest-benchmark",
  "hypothesis>=6.150.0",
  "coverage[toml]>=7.13",
  "coverage-conditional-plugin",
  "covdefaults",
]
docs = [
  "sphinx < 9.0",
  "sphinx-autoapi>=3.6",
  "myst-parser>=5.0",
  "sphinx-copybutton",
  "sphinx-immaterial",
]

#####################################################
# PyTest
#####################################################
[tool.pytest]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

#####################################################
# Documentation
#####################################################
[tool.esbonio.sphinx]
buildCommand = [
  "sphinx-build",
  "-M",
  "dirhtml",
  "./docs/sources/",
  "${defaultBuildDir}",
]
pythonCommand = ["uv", "run", "python"]
